deployCode/objects/Places__c.object
<CustomObject>
    <description>Location info</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Place</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Mine</filterScope>
        <label>View</label>
    </listViews>
    <nameField>
        <label>Places Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Greaterthan0</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c &lt;0.00</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>minimum rating is 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lessthan5</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c &gt;5.00</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Maximum rating is 5</errorMessage>
    </validationRules>
</CustomObject>